fixed li box height. no longer collapses on search

--- a/src/todo-list/todo.css
+++ b/src/todo-list/todo.css
@@ -110,6 +110,7 @@ body {
 
 .list li {
   width: 100%;
+  height: 80px;
   list-style: none;
   font-size: 2.25em;
   padding: 10px 50px;
@@ -118,6 +119,7 @@ body {
   border-radius: 10px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 } 
 
 .list .btn {
